--- a/Version.targets
+++ b/Version.targets
@@ -7,9 +7,8 @@
     <GitBranch Condition="'$(SYSTEM_PULLREQUEST_TARGETBRANCH)' != ''">$(SYSTEM_PULLREQUEST_TARGETBRANCH)</GitBranch>
     <GitBranch Condition="'$(SYSTEM_PULLREQUEST_TARGETBRANCH)' == '' and '$(BUILD_SOURCEBRANCHNAME)' != ''">$(BUILD_SOURCEBRANCHNAME)</GitBranch>
   </PropertyGroup>
-
   <Target Name="SetVersions"
-          BeforeTargets="PrepareForBuild;GetAssemblyVersion;GetPackageVersion;Pack"
+          BeforeTargets="GetAssemblyVersion"
           DependsOnTargets="GitVersion"
           Returns="$(Version)"
          >
